; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_compressor-filter.c_resize_env_buffer.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_compressor-filter.c_resize_env_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compressor_data = type { i64, i64, i8**, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.compressor_data*, i64)* @resize_env_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @resize_env_buffer(%struct.compressor_data* %0, i64 %1) #0 {
  %3 = alloca %struct.compressor_data*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.compressor_data* %0, %struct.compressor_data** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load %struct.compressor_data*, %struct.compressor_data** %3, align 8
  %8 = getelementptr inbounds %struct.compressor_data, %struct.compressor_data* %7, i32 0, i32 0
  store i64 %6, i64* %8, align 8
  %9 = load %struct.compressor_data*, %struct.compressor_data** %3, align 8
  %10 = getelementptr inbounds %struct.compressor_data, %struct.compressor_data* %9, i32 0, i32 3
  %11 = load i8*, i8** %10, align 8
  %12 = load i64, i64* %4, align 8
  %13 = mul i64 %12, 4
  %14 = call i8* @brealloc(i8* %11, i64 %13)
  %15 = load %struct.compressor_data*, %struct.compressor_data** %3, align 8
  %16 = getelementptr inbounds %struct.compressor_data, %struct.compressor_data* %15, i32 0, i32 3
  store i8* %14, i8** %16, align 8
  store i64 0, i64* %5, align 8
  br label %17

17:                                               ; preds = %38, %2
  %18 = load i64, i64* %5, align 8
  %19 = load %struct.compressor_data*, %struct.compressor_data** %3, align 8
  %20 = getelementptr inbounds %struct.compressor_data, %struct.compressor_data* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ult i64 %18, %21
  br i1 %22, label %23, label %41

23:                                               ; preds = %17
  %24 = load %struct.compressor_data*, %struct.compressor_data** %3, align 8
  %25 = getelementptr inbounds %struct.compressor_data, %struct.compressor_data* %24, i32 0, i32 2
  %26 = load i8**, i8*** %25, align 8
  %27 = load i64, i64* %5, align 8
  %28 = getelementptr inbounds i8*, i8** %26, i64 %27
  %29 = load i8*, i8** %28, align 8
  %30 = load i64, i64* %4, align 8
  %31 = mul i64 %30, 4
  %32 = call i8* @brealloc(i8* %29, i64 %31)
  %33 = load %struct.compressor_data*, %struct.compressor_data** %3, align 8
  %34 = getelementptr inbounds %struct.compressor_data, %struct.compressor_data* %33, i32 0, i32 2
  %35 = load i8**, i8*** %34, align 8
  %36 = load i64, i64* %5, align 8
  %37 = getelementptr inbounds i8*, i8** %35, i64 %36
  store i8* %32, i8** %37, align 8
  br label %38

38:                                               ; preds = %23
  %39 = load i64, i64* %5, align 8
  %40 = add i64 %39, 1
  store i64 %40, i64* %5, align 8
  br label %17

41:                                               ; preds = %17
  ret void
}

declare dso_local i8* @brealloc(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
